voting-app_flexvolume/ingress-voting-app.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: voting-app-ingress
spec:
  rules:
  - host: voting-app.ccp1.ciscoth.com
    http:
      paths:
      - path: /
        backend:
          serviceName: vote
          servicePort: 80
  - host: result.ccp1.ciscoth.com
    http:
      paths:
      - path: /
        backend:
          serviceName: result
          servicePort: 80
